# microservice-zoom-room-sdk

./: Dockerfile  OpenAV microservice Zoom Room SDK.json  README.md  _fifo_runner.sh  _start.sh
.github/workflows/: build_latest.yaml  build_release.yml
_var_www_html/: api.php  index.php
controller/: zrcsdk.readme.txt
controller/app/: CMakeLists.txt
controller/app/include/: OpenAVControllerApp.h  ZRCSDKSink.h  sinks.h
controller/app/src/: OpenAVControllerApp.cpp  main.cpp
